# docs/swagger.json
@@ -102,8 +102,17 @@
                         "$ref": "#/definitions/model.Item"
                     }
                 },
+                "organizer": {
+                    "type": "string"
+                },
+                "participant": {
+                    "type": "string"
+                },
                 "title": {
                     "type": "string"
+                },
+                "type": {
+                    "type": "integer"
                 }
             }
         },
